--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "keen-slider": "^6.8.6",
     "react": "^18.2.0",
+    "react-card-flip": "^1.2.2",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-router-dom": "^6.17.0"
